# Flog

./: .env.template  .envrc  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  README.md  app.json  application.py  deploy.sh  docker-compose.yml  messages.pot  mypy.ini  mysecret.enc  pyproject.toml  requirements.txt  start_server.sh  test_result.html  wsgi.py
.github/workflows/: backend.yml  frontend.yml
flaskblog/: __init__.py  admin.py  app.py  atom.py  babel.cfg  cli.py  config.py  db.sqlite3  models.py  site.yml  tasks.py  templating.py  utils.py  views.py
flaskblog/_posts/: 2016-07-07-ordered-dict.md  2017-08-28-howdoesitwork-withmetaclass.md  hello-world.md  markdown-in-blog.md
flaskblog/admin/: __init__.py  forms.py  views.py
flaskblog/api/: __init__.py  utils.py  views.py
flaskblog/auth/: __init__.py  models.py  oauth.py  views.py
flaskblog/md/: __init__.py  extensions.py  plugins.py
flaskblog/static/: article.css  robots.txt  style.css  yue.css
flaskblog/static/MDEditor/: LICENSE.md  README.md  changelog.md  mdeditor.css  mdeditor.js
flaskblog/static/color-hash/: LICENSE
flaskblog/templates/: 404.html  _layout.html  _page.html  about.html  archive.html  auth.html  index.html  layout.html  page.html  post.html  search.html  wxr.xml
migrations/: env.py
migrations/versions/: 26e5ad8a7d1d_.py  31e742e9aedd_add_comment_model.py  3906667d18c9_add_image_caption.py  445a101b044e_change_url_and_html_to_fields.py  4d34dbcbed58_.py  56d102569684_.py  5d5340d8c969_.py  61c034e875dd_add_picture.py  6324574ac773_oauth.py  6bcebbb3e042_.py  9b30a907767b_.py  c8bc4d8ab74c_add_page_table.py
nginx/conf.d/: default.conf
static/: .env.development  package.json  robots.txt  vue.config.js
static/cards/: widget.js
static/color-hash/: color-hash.js
static/css/: article.css  dracula.css  highlight.css  reflux.css  style.css  yue.css
static/iconfont/: demo_fontclass.html  iconfont.eot
static/js/: cos-js-sdk-v5.min.js  cos-upload.js  custom.js  flog.js
static/mock/: article.js  index.js  page.js  post.js  remote-search.js  user.js
static/public/: index.html
static/src/: jsconfig.json  main.js  settings.js
tests/: base.py  test_admin.py  test_main.py
(+154 files in other folders)
