[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "flake8",
    "flask-shell-ipython",
    "mypy",
    "appnope; sys_platform == \"darwin\"",
    "python-dotenv<1.0.0,>=0.12.0",
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dynamic = ["classifiers"]
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "authlib",
    "cssmin",
    "faker",
    "flask~=1.0",
    "flask-assets",
    "flask-babel",
    "flask-cors",
    "flask-login",
    "flask-mail",
    "flask-migrate",
    "flask-moment",
    "flask-sqlalchemy",
    "flask-whooshee",
    "gevent; sys_platform != \"win32\"",
    "jsmin",
    "python-slugify",
    "pyyaml",
    "qcloud-python-sts",
    "six",
    "gunicorn<20.0.0; sys_platform != \"win32\"",
    "marko[codehilite,toc]",
]

[project.optional-dependencies]
mysql = [
    "mysqlclient~=2.0",
]
postgres = [
    "psycopg2-binary~=2.9",
]
